Fix original image and price and add an extra space in the alert when the cart is empty.

--- a/src/components/cart/cart.css
+++ b/src/components/cart/cart.css
@@ -10,6 +10,6 @@
     text-align: right;
 }
 
-.d-grid > button:first-child {
+.d-grid > a.btn {
     margin-top: 25px;
 }
