--- a/src/components/common/common.css
+++ b/src/components/common/common.css
@@ -4,6 +4,24 @@ button.btn  {
     color: white;
 }
 
+a.btn  {
+    background-color: #52b3d0;
+    border-color: #52b3d0;
+    color: white;
+}
+
+a.btn:hover {
+    background-color: #2888a2;
+    border-color: #2888a2;
+    color: white;
+}
+
+button.bold-button:hover {
+    background-color: #52b3d0;
+    border-color: #52b3d0;
+    color: white;
+}
+
 button.bold-button {
     background-color: #6c757d;
     border-color: #6c757d;
